After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660854 - Various annotation fixes
Various annotation fixes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-04 07:20 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2011-10-04 20:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Various annotation fixes (2.79 KB, patch)
2011-10-04 07:20 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
Various annotation fixes (2.75 KB, patch)
2011-10-04 19:23 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
Various annotation fixes (2.76 KB, patch)
2011-10-04 20:34 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-10-04 07:20:03 UTC
Some basic annotation fixes.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-10-04 07:20:05 UTC
Created attachment 198191 [details] [review]
Various annotation fixes
Comment 2 Colin Walters 2011-10-04 13:09:50 UTC
Review of attachment 198191 [details] [review]:

::: src/core/screen.c
@@ +3494,3 @@
+ * meta_screen_get_size:
+ * @screen: A #MetaScreen
+ * @width: (out caller-allocates): The width of the screen

Don't need the caller-allocates here, it only applies to structures.
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-10-04 19:23:24 UTC
Created attachment 198242 [details] [review]
Various annotation fixes

OK.
Comment 4 Colin Walters 2011-10-04 20:27:02 UTC
Review of attachment 198242 [details] [review]:

::: src/core/screen.c
@@ +3495,3 @@
+ * @screen: A #MetaScreen
+ * @width: The width of the screen
+ * @height: The height of the screen

These should be (out).  Just don't need to be (out caller-allocates).
Comment 5 Jasper St. Pierre (not reading bugmail) 2011-10-04 20:34:02 UTC
Created attachment 198248 [details] [review]
Various annotation fixes

Ah, that's what you meant.
Comment 6 Colin Walters 2011-10-04 20:40:09 UTC
Review of attachment 198248 [details] [review]:

Looks good, thanks!
Comment 7 Jasper St. Pierre (not reading bugmail) 2011-10-04 20:45:11 UTC
Attachment 198248 [details] pushed as f82966a - Various annotation fixes