Various annotation fixes

https://bugzilla.gnome.org/show_bug.cgi?id=660854